Refactor GenericSearch and BaseQueue (untested)